--- a/WebApplication/Views/User/Index.cshtml
+++ b/WebApplication/Views/User/Index.cshtml
@@ -1,30 +1,37 @@
-﻿@{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+﻿@using Models;
+@{
+    ViewBag.Title = "Chi tiết tài khoản";
+    var view = new VstViewFormat
+    {
+        DataSource = Model,
+        Columns = new List<ColumnInfo>
+{
+            new ColumnInfo { Name = "UserName",  Caption = "Tên người dùng", AllowNull = false, Type="text" },
+            new ColumnInfo { Name = "Email",  Caption = "Địa chỉ email", AllowNull = false, Type="text" },
+            new ColumnInfo { Name = "Name",  Caption = "Họ và tên", AllowNull = false, Type="text" },
+            new ColumnInfo { Name = "Role",  Caption = "Role", Type = "text", Disabled=true},
+            //new ColumnInfo { Name = "Password",  Caption = "Mật khẩu", Input = "none" },
+        },
+    };
 }
 
-<div class="jumbotron">
-    <h1>Test User</h1>
-    </div>
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET Web API is a framework that makes it easy to build HTTP services that reach
-            a broad range of clients, including browsers and mobile devices. ASP.NET Web API
-            is an ideal platform for building RESTful applications on the .NET Framework.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301870">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301871">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301872">Learn more &raquo;</a></p>
-    </div>
-</div>
+<h2>@ViewBag.Title - Test</h2>
+@*<style>
+        .Id {
+            width: 200px;
+            background-color: whitesmoke;
+        }
+        .Role {
+            width: 80px;
+        }
+    </style>*@
 
+<div id="main-content"></div>
 
+<script>
+    var fields = @view.HtmlColumns;
+    var values = @view.HtmlData;
+
+    //fields[3].options = ["USER", "MOD"];
+    var table = new ApiTable("/account/", fields, values, 7, null );
+</script>
