--- a/WebApplication/Views/Device/Index.cshtml
+++ b/WebApplication/Views/Device/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewBag.Title = "Devices";
+
     var view = new VstViewFormat
     {
         DataSource = Model,
@@ -7,8 +8,9 @@
 {
             new ColumnInfo { Name = "Id", ClassName = "lg-12", Caption = "Mã thiết bị" , Type="text"},
             new ColumnInfo { Name = "Name", ClassName = "lg-12", Caption = "Tên thiết bị", Type="text" },
-            new ColumnInfo { Name = "Status", ClassName = "lg-12", Caption = "Trạng thái", Type="text" },
+            //new ColumnInfo { Name = "Status['LED1']", ClassName = "lg-12", Caption = "Trạng thái", Type="text" },
         },
+      
     };
 }
 
