--- a/WebApplication/Views/Shared/_Layout.cshtml
+++ b/WebApplication/Views/Shared/_Layout.cshtml
@@ -14,6 +14,7 @@
     <script src="~/Scripts/vst.js?v=1.0.4.1"></script>
     <link rel="stylesheet" href="~/Content/assets/css/fontawesome-all.min.css" />
     <link rel="stylesheet" href="~/Content/assets/css/main.css" />
+    <link rel="stylesheet" href="~/Content/assets/css/mystyle.css" />
 </head>
 <body class="is-preload">
     <div id="wrapper">
